Fixed css error on mobile

--- a/assets/css/main.styl
+++ b/assets/css/main.styl
@@ -102,7 +102,6 @@ input[type=checkbox]
    .card-front
       position: relative
       cursor: pointer
-      min-height: 250px
 
       .highlight
          position: absolute
@@ -247,8 +246,6 @@ input[type=checkbox]
    .cards
       .card-wrap
          width: 33.3333%
-      .card
-         min-height: 170px
 
 // Move sidebar to the top
 @media (max-width: 600px)
@@ -292,8 +289,6 @@ input[type=checkbox]
          margin: 5px 0 0 0 
 
       .cards
-         .card
-            min-height: 140px
          .set-name-wrap 
             font-size: 16px
 
